# HTTPRequest

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  sonar-project.properties
.circleci/: config.yml
example/: Makefile  example.sln  example.vcxproj  main.cpp
example/example.xcodeproj/: project.pbxproj
include/: HTTPRequest.h  HTTPRequest.hpp
test/: Makefile  main.cpp  test.sln  test.vcxproj
test/test.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  Makefile  encoding.cpp  parsing.cpp  tests.cpp  tests.sln  tests.vcxproj
tests/tests.xcodeproj/: project.pbxproj
tests/tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
